changed layout from inline-block to floats and fixed spacing issues on last two breakpoints.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -53,12 +53,16 @@ header > p {
 
 /***images and captions***/
  div {
- 	display: inline-block;
- 	width: 40%
+ 	width: 45%
  }
 
- div:nth-of-type(2n+1) {
- 	margin-right: 15%;
+ div:nth-of-type(odd) {
+ 	margin-right: 5%;
+ 	float: left;
+ }
+
+ div:nth-of-type(even) {
+ 	float: right;
  }
 
 section {
@@ -76,25 +80,19 @@ div {
 	width: 30%;
 }
 
- div:nth-of-type(2n+1) {
- 	margin-right: 0;
- }
+div:nth-of-type(1), div:nth-of-type(2), div:nth-of-type(4), div:nth-of-type(5) {
+	float: left;
+	margin-right: 5%;
+}
 
- div:nth-of-type(1n) {
- 	margin-right: 3%;
- }
-
- div:nth-of-type(2n) {
- 	margin-right: 3%;
- }
+div:nth-of-type(3), div:nth-of-type(6) {
+	float: right;
+	margin-right: 0;
+}
 
  section {
  	max-width: 1000px;
+ 	padding: 0;
  }
-
-
-
-
-
 
 }
